--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "element-ui": "^2.13.2",
+    "toastr": "^2.1.4",
+    "v-viewer": "^1.5.1",
+    "vue": "^2.6.11",
+    "vue-cookie": "^1.1.4",
+    "vue-cookies": "^1.7.3",
+    "vue-pdf": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
